# near-client

./: .gitignore  Cargo.toml  LICENSE.md  README.md  index.html  output-98e6454882fabb67.css  typos.toml  wallet-a6b19e2e4b0bd509.js  wallet-e4df662ab5cdeb8f.js  wallet-e4df662ab5cdeb8f_bg.wasm
.github/workflows/: ci.yml
examples/wallet/: Cargo.toml  index.html  tailwind.config.js
examples/wallet/src/: api.rs  components.rs  footer.rs  header.rs  login.rs  main.rs  wallet.rs
src/: client.rs  components.rs  lib.rs  utils.rs
src/crypto/: dhx.rs  ed25519.rs  mod.rs
src/near_primitives_light/: errors.rs  mod.rs  receipt.rs  transaction.rs  types.rs  views.rs
src/rpc/: client.rs  mod.rs
tests/: crypto.rs  rpc.rs
tests/test-contract/: Cargo.toml
tests/test-contract/src/: lib.rs
