[package]
name = "near-client"
version = "0.1.0"
edition = "2021"
authors = ["silvestr@relayz.io", "kyrylo@relayz.io"]
description = """
This crate is used between other crates to provide the same
API for signing data and shared types. Please note that all data
structures should be serializable with "serde" and "borsh"
"""

[dependencies]
base64 = { version = "0.20" }
bs58 = "0.4"
borsh = "0.9"
curve25519-dalek = "3"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = "1"
itertools = "0.10"
near-primitives-core = "0.15"
near-units = "0.2"
near-vm-errors = "3.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", default-features = false, features = ["derive", "rc"] }
serde_json = { version = "1", default-features = false }
thiserror = "1"
url = "2"
x25519-dalek = { version = "1", features = ["serde"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8.5"
rand_chacha = "0.3"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
workspaces = { git = "https://github.com/near/workspaces-rs.git", features = [
    "unstable",
] }
