[package]
name = "near-client"
version = "0.2.0"
edition = "2021"
authors = ["silvestr@relayz.io", "kyrylo@relayz.io"]
repository = "https://github.com/Relayz-io/near-client"
license = "MIT OR Apache-2.0"
keywords = ["near", "client", "wasm"]
categories = ["wasm", "finance"]
description = """
Used for accessing a contract API from any platform.
Primarily designed for WebAssembly.
"""

[dependencies]
base64 = "0.21"
bs58 = "0.4"
borsh = "0.10"
curve25519-dalek = "3"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = "1"
itertools = "0.10"
near-primitives-core = { version = "0.16" }
near-units = "0.2"
near-vm-errors = { git = "https://github.com/near/nearcore.git", package = "near-vm-errors" }
reqwest = { version = "0.11", features = [
    "json",
    "rustls-tls",
], default-features = false }
serde = { version = "1", default-features = false, features = ["derive", "rc"] }
strum = "0.24"
serde_json = { version = "1", default-features = false }
thiserror = "1"
url = "2"
x25519-dalek = { version = "1", features = ["serde"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8.5"
rand_chacha = "0.3"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
workspaces = { git = "https://github.com/near/workspaces-rs.git", features = [
    "unstable",
] }
