[package]
name = "near-client"
version = "0.7.2"
edition = "2021"
authors = ["silvestr1994@gmail.com"]
repository = "https://github.com/silvestrpredko/near-client"
license = "MIT OR Apache-2.0"
keywords = ["near", "client", "wasm"]
categories = ["wasm", "finance"]
description = """
Used for accessing a contract API from any platform.
Primarily designed for WebAssembly.
"""

[dependencies]
base64 = "0.21"
bs58 = "0.5"
borsh = "0.10"
curve25519-dalek = "4"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = "2"
itertools = "0.12"
near-primitives-core = { version = "0.17" }
near-units = "0.2"
rand = "0.8.5"
reqwest = { version = "0.11", features = [
    "json",
    "rustls-tls",
], default-features = false }
serde = { version = "1", default-features = false, features = ["derive", "rc"] }
strum = "0.24"
serde_json = { version = "1", default-features = false }
serde_with = "3"
thiserror = "1"
url = "2"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
rand_chacha = "0.3"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
near-workspaces = { git = "https://github.com/near/near-workspaces-rs.git", features = [
    "unstable",
] }
